feat: estimate imu noise using allantools

--- a/examples/k2/main.ipynb
+++ b/examples/k2/main.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "from orbslam_k2 import ORBSLAM3\n",
-    "from sensor_utils import sync_video, convert_logs_to_csv, read_synced_logs"
+    "from sensor_utils import sync_video, read_synced_logs, convert_logs_to_csv"
    ]
   },
   {
@@ -31,12 +31,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from main import timedelta_from_string"
+    "from sensor_utils import estimate_imu_noise"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from main import timedelta_from_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +92,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs = read_synced_logs(DATA_DIR / config[\"csv_log_name\"], fps, log_start)"
+    "logs = convert_logs_to_csv(\n",
+    "    str(DATA_DIR / config[\"raw_log_name\"]),\n",
+    "    str(DATA_DIR / config[\"csv_log_name\"])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMU.NoiseGyro: 0.1158368889150598\n",
+      "IMU.NoiseAcc: 1.8275090175986226\n",
+      "IMU.GyroWalk: 0.01016279800767177\n",
+      "IMU.AccWalk: 0.30767328132345867\n",
+      "IMU.Frequency: 79.97719002680483\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimate_imu_noise(logs)"
    ]
   },
   {
