feat: setting up for a new video

--- a/examples/k2/main.ipynb
+++ b/examples/k2/main.ipynb
@@ -52,11 +52,11 @@
     "PROJECT_DIR = Path(\"..\") / \"..\"\n",
     "VOCABLUARY_PATH = PROJECT_DIR / \"Vocabluary\" / \"ORBvoc.txt\"\n",
     "\n",
-    "VIDEO_FOLDER = Path(\"cam1_lens100_alt600\")\n",
+    "VIDEO_FOLDER = Path(\"2023-05-14\") / \"video_cam81_flight2_800m\"\n",
     "CONFIG_PATH = VIDEO_FOLDER / \"config.yaml\"\n",
     "ORB_CONFIG_PATH = VIDEO_FOLDER / \"orb_config.yaml\"\n",
     "\n",
-    "DATA_DIR = PROJECT_DIR / \"data\" / \"k2\" / VIDEO_FOLDER"
+    "DATA_DIR = PROJECT_DIR / \"data\" / \"2023-05-14\""
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offset = pd.Timedelta(minutes=5, seconds=0) # timedelta_from_string(config[\"offset\"])\n",
+    "offset = pd.Timedelta(minutes=0, seconds=0) # timedelta_from_string(config[\"offset\"])\n",
     "log_start = timedelta_from_string(config[\"log_start\"]) + offset\n",
     "video_start = timedelta_from_string(config[\"video_start\"]) + offset"
    ]
@@ -97,6 +97,15 @@
    "outputs": [],
    "source": [
     "logs = read_logs(DATA_DIR, config[\"log_name\"], log_start=log_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs"
    ]
   },
   {
