chore: adding latest video configs

--- a/notebooks/calibration.ipynb
+++ b/notebooks/calibration.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VIDEO_PATH = Path(\"../data/2023-05-14/video_cam0_13_25_46_02-03-23_cam81_opencv.mp4\")"
+    "VIDEO_PATH = Path(\"../data/day7/video_cam0_13_00_34_02-03-23_flight2.mp4\")"
    ]
   },
   {
@@ -47,12 +47,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "vid = cv2.VideoCapture(str(VIDEO_PATH))\n",
     "# ret = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, img = vid.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1080, 1920, 3)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
    ]
   },
   {
@@ -77,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
